@@ -364,6 +364,7 @@ PLAYERKILL=OPTIONAL-4
 # PURGE        The player is erased from the system.
 # UNLEVEL X    The player loses X levels of experience.
 # LOSESKILL    The player loses a random skill
+# RETAIN       The player retains their equipment
 # ASTRAL       The player becomes an astral spirit.
 # ASTRAL_RES   As ASTRAL, but player can self-resurrect.
 # EXPERIENCE   The player loses 100 experience points per level
@@ -410,8 +411,8 @@ EXPRATE=6
 # The CORPSEGUARD string is used to determine who may loot the 
 # corpses of dead players.  Use ALL to allow anyone to loot
 # them (default), SELFONLY will only allow the players to loot
-# their own corpses, and the PKONLY flag will allow the players, or 
-# other players with the playerkill flag turned on to loot.
+# their own corpses,  PKONLY flag will allow the players, or 
+# other players with the playerkill flag turned on, to loot.
 CORPSEGUARD=ALL
 
 # The ITEMLOOTPOLICY is left blank to not implement any item-loss
