@@ -1013,55 +1013,66 @@ public class StdRace implements Race
 		}
 
 		//final List<Item> items=new ArrayList<Item>();
-		final HashMap<Item,Container> containerMap=new HashMap<Item,Container>();
-		final HashMap<Item,Container> itemMap=new HashMap<Item,Container>();
-		final LinkedList<Item> itemsToGo=new LinkedList<Item>();
-		for(int i=0;i<mob.numItems();i++)
+		if((!mob.isPlayer())
+		||(!CMParms.parseCommas(CMProps.get(mob.session()).getStr(CMProps.Str.PLAYERDEATH).toUpperCase(),true).contains("RETAIN")))
 		{
-			final Item thisItem=mob.getItem(i);
-			if(thisItem != null)
-				itemsToGo.add(thisItem);
-		}
-		for(Item thisItem : itemsToGo)
-		{
-			if(thisItem.isSavable()
-			|| (thisItem.fetchEffect("QuestBound")!=null)) // a quest-item drop must be preserved, even unsavable ones!
+			final HashMap<Item,Container> containerMap=new HashMap<Item,Container>();
+			final HashMap<Item,Container> itemMap=new HashMap<Item,Container>();
+			final LinkedList<Item> itemsToGo=new LinkedList<Item>();
+			for(int i=0;i<mob.numItems();i++)
 			{
-				if(mob.isMonster())
+				final Item thisItem=mob.getItem(i);
+				if(thisItem != null)
+					itemsToGo.add(thisItem);
+			}
+			for(Item thisItem : itemsToGo)
+			{
+				if(thisItem.isSavable()
+				|| (thisItem.fetchEffect("QuestBound")!=null)) // a quest-item drop must be preserved, even unsavable ones!
 				{
-					Item newItem=CMLib.utensils().isRuinedLoot(mob,thisItem);
-					if(newItem==null)
-						continue;
-					if(newItem==thisItem) // why are mob items copied if they are restored anyway?
-						newItem=(Item)thisItem.copyOf();
-					if(newItem != null)
+					if(mob.isMonster())
 					{
-						if(newItem instanceof Container)
-							itemMap.put(thisItem,(Container)newItem);
-						if(thisItem.container()!=null)
-							containerMap.put(thisItem,thisItem.container());
-						newItem.setContainer(null);
-						newItem.setExpirationDate( System.currentTimeMillis() +
-												   CMProps.getIntVar( CMProps.Int.EXPIRE_MONSTER_EQ )* TimeManager.MILI_HOUR );
-						newItem.recoverPhyStats();
-						thisItem=newItem;
+						Item newItem=CMLib.utensils().isRuinedLoot(mob,thisItem);
+						if(newItem==null)
+							continue;
+						if(newItem==thisItem) // why are mob items copied if they are restored anyway?
+							newItem=(Item)thisItem.copyOf();
+						if(newItem != null)
+						{
+							if(newItem instanceof Container)
+								itemMap.put(thisItem,(Container)newItem);
+							if(thisItem.container()!=null)
+								containerMap.put(thisItem,thisItem.container());
+							newItem.setContainer(null);
+							newItem.setExpirationDate( System.currentTimeMillis() +
+													   CMProps.getIntVar( CMProps.Int.EXPIRE_MONSTER_EQ )* TimeManager.MILI_HOUR );
+							newItem.recoverPhyStats();
+							thisItem=newItem;
+						}
 					}
+					else
+						mob.delItem(thisItem);
+					thisItem.unWear();
+					if(thisItem.container()==null)
+						thisItem.setContainer(bodyI);
+					if(room!=null)
+						room.addItem(thisItem);
+					//items.add(thisItem);
 				}
 				else
+				{
 					mob.delItem(thisItem);
-				thisItem.unWear();
-				if(thisItem.container()==null)
-					thisItem.setContainer(bodyI);
-				if(room!=null)
-					room.addItem(thisItem);
-				//items.add(thisItem);
+				}
 			}
-			else
+			itemsToGo.clear();
+			for(final Item oldItem : itemMap.keySet())
 			{
-				mob.delItem(thisItem);
+				final Item newItem=itemMap.get(oldItem);
+				final Item oldContainer=containerMap.get(oldItem);
+				if((oldContainer!=null)&&(newItem!=null))
+					newItem.setContainer(itemMap.get(oldContainer));
 			}
 		}
-		itemsToGo.clear();
 
 		final Item dropItem=CMLib.catalog().getDropItem(mob,false);
 		if(dropItem!=null)
@@ -1074,13 +1085,6 @@ public class StdRace implements Race
 			//items.add(dropItem);
 		}
 
-		for(final Item oldItem : itemMap.keySet())
-		{
-			final Item newItem=itemMap.get(oldItem);
-			final Item oldContainer=containerMap.get(oldItem);
-			if((oldContainer!=null)&&(newItem!=null))
-				newItem.setContainer(itemMap.get(oldContainer));
-		}
 		if(destroyBodyAfterUse())
 		{
 			for(Item I : myResources())
